--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
 	<groupId>com</groupId>
 	<artifactId>TravelApp</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<packaging>war</packaging>
+	<packaging>jar</packaging>
 	<name>TravelApp</name>
 	<description>Demo project for Spring Boot</description>
 	<properties>
@@ -93,6 +93,7 @@
 				</configuration>
 			</plugin>
 		</plugins>
+		<finalName>TravelApp</finalName>
 	</build>
 
 </project>
