--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,9 +8,9 @@ spring.mvc.view.suffix=.jsp
 
 #MySQL Database Config
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/travelappdb
-spring.datasource.username=root
-spring.datasource.password=mypassword
+spring.datasource.url=jdbc:mysql://travelappdatabase.cpouo0ki8ek9.ap-south-1.rds.amazonaws.com:3306/travelappdatabase
+spring.datasource.username=admin
+spring.datasource.password=adminadmin
 
 
 #spring data jpa Configurations
