--- a/pom.xml
+++ b/pom.xml
@@ -76,7 +76,7 @@
 		<dependency>
     <groupId>com.fasterxml.jackson.core</groupId>
     <artifactId>jackson-databind</artifactId>
-    <version>2.13.1</version> <!-- Use the latest version -->
+    <version>2.13.1</version> 
 </dependency>
 
 	</dependencies>
