--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
 	<groupId>com</groupId>
 	<artifactId>TravelApp</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<packaging>jar</packaging>
+	<packaging>war</packaging>
 	<name>TravelApp</name>
 	<description>Demo project for Spring Boot</description>
 	<properties>
